<resources>
    <string name="app_name">Gooding</string>

    <string name="server_client_id">1025089687385-2jeq6l8c296ekcdecjg76i0382a4j0fg.apps.googleusercontent.com</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed">피드</string>
    <string name="record">기록</string>
    <string name="my_gooding">나의 굳잉</string>
    <string name="recent_items">최근 항목</string>
    <string name="next_step">다음</string>
    <string name="max_five_images_and_videos">최대 5개의 이미지 및 영상을 선택할 수 있습니다.</string>

    <string name="what_goodie_day_did_you_have">어떤 굳이데이를 보내셨나요?</string>
    <string name="setting_privacy">공개 여부 설정</string>
    <string name="making_my_record_public_can_show_other_people">기록을 공개하면, 다른 사람들도 나의 기록을 볼 수 있습니다.</string>
    <string name="please_set_place">장소를 설정해주세요. (선택)</string>
    <string name="goodie_day_place">활동 장소</string>
    <string name="goodie_day_date_hint">YY / MM / DD</string>
    <string name="goodie_day_date">활동 날짜</string>
    <string name="please_write_your_goodie_day">굳이데이 활동과 계기에 대해 작성해주세요.</string>
    <string name="please_write_title">제목을 입력해주세요.</string>
    <string name="very_little_romantic">낭만이긴 했어요</string>
    <string name="little_romantic">소소한 낭만이었어요</string>
    <string name="normal_romantic">나름 낭만있었어요</string>
    <string name="very_romantic">낭만 그 자체였어요</string>
    <string name="best_romantic">잊지못할 낭만이었어요</string>
    <string name="finish_record">기록 완료</string>
    <string name="how_romantic_was_your_goodie_day">작성하신 굳이데이는 얼마나 낭만적이었나요?</string>
    <string name="title_activity_record01">Record01Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="asterisk">*</string>
    <string name="please_choose_category">카테고리를 선택해주세요. (선택)</string>
    <string name="goodie_day_category">활동 카테고리</string>
    <string name="please_search_goodie_day_place">굳이데이를 즐긴 장소를 검색해주세요.</string>
    <string name="title_select_date">활동 날짜 선택</string>
    <string name="select_complete">선택 완료</string>
    <string name="nothing_found">검색 결과가 없습니다.</string>
    <string name="delete_all">모두 지우기</string>
    <string name="title_recent_keyword_list">최근 검색어</string>
    <string name="please_input_keyword">검색어를 입력하세요</string>
    <string name="title_select_goodie_day_place">장소 선택</string>
    <string name="search_region_place">지역, 장소 검색</string>
    <string name="exit">나가기</string>
    <string name="recent_album_name">최근 항목</string>
    <string name="limit_exceed_toast">이미지 및 영상은 최대 5개까지 선택할 수 있습니다.</string>
    <string name="cover">표지</string>
    <string name="add_file">사진 추가</string>
    <string name="comma">,</string>​
</resources>