<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor"
    tools:context=".presentation.record.Record01Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_arrow_back"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/icon_arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1000"
        android:progressTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_edit_goodie_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_image_video_file_list"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listItems="@layout/item_record_image_video_file" />

            <LinearLayout
                android:id="@+id/layout_title_what_goodie_day_did_you_have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_image_video_file_list">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_goodie_day_did_you_have"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/pretendard_semibold"
                    android:textFontWeight="600" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/asterisk"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_title_goodie_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_text_input_layout_unselected_with_padding"
                app:boxBackgroundMode="none"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_title_what_goodie_day_did_you_have">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_edit_title_goodie_day"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/please_write_title"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/quaternaryColor"
                    android:textCursorDrawable="@drawable/cursor_drawable" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.dnd_9th_3_android.gooding.ui.component.RecordInputTextView
                android:id="@+id/text_layout_content_goodie_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_layout_title_goodie_day" />

            <LinearLayout
                android:id="@+id/layout_date_goodie_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_layout_content_goodie_day">

                <TextView
                    android:id="@+id/tv_date_goodie_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goodie_day_date"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/pretendard_semibold"
                    android:textFontWeight="600" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/asterisk"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/text_layout_date_goodie_day"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/tertiaryColor"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_date_goodie_day">

                <TextView
                    android:id="@+id/text_edit_date_goodie_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:maxLines="1"
                    android:text="@string/goodie_day_date_hint"
                    android:textColor="@color/quaternaryColor"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/icon_arrow_right" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title_place_goodie_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/goodie_day_place"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/pretendard_semibold"
                android:textFontWeight="600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_layout_date_goodie_day" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_place_goodie_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/tertiaryColor"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_place_goodie_day">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_place_pin"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/icon_default_place_pin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_set_place_goodie_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:background="@null"
                        android:text="@string/please_set_place"
                        android:textColor="@color/quaternaryColor"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_place_pin"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/icon_arrow_right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title_category_goodie_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/goodie_day_category"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/pretendard_semibold"
                android:textFontWeight="600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_place_goodie_day" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_category_goodie_day"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/tertiaryColor"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_category_goodie_day">

                <TextView
                    android:id="@+id/tv_choose_category_goodie_day"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/please_choose_category"
                    android:textColor="@color/quaternaryColor"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/icon_arrow_right" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title_privacy_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/setting_privacy"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/pretendard_semibold"
                android:textFontWeight="600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_category_goodie_day" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_privacy_setting"
                style="@style/CustomSwitchCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:thumb="@drawable/selector_thumb"
                android:track="@drawable/selector_track"
                app:layout_constraintBottom_toBottomOf="@id/tv_title_privacy_setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title_privacy_setting" />

            <TextView
                android:id="@+id/tv_subtitle_privacy_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:text="@string/making_my_record_public_can_show_other_people"
                android:textColor="@color/quaternaryColor"
                android:textSize="12sp"
                android:fontFamily="@font/pretendard_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_privacy_setting" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next_step"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_margin="20dp"
                android:background="@drawable/button_background01"
                android:text="@string/next_step"
                android:textColor="@color/unactivatedColor"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/pretendard_semibold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitle_privacy_setting" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>