<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor"
    tools:context=".record.Record02Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_arrow_back"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/icon_arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:indicatorColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <TextView
        android:id="@+id/tv_title_how_romantic_was_your_goodie_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/how_romantic_was_your_goodie_day"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_bar" />

    <GridLayout
        android:id="@+id/layout_romance_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="18dp"
        android:rowCount="3"
        android:columnCount="2"
        app:layout_constraintTop_toBottomOf="@id/tv_title_how_romantic_was_your_goodie_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_romance_level_01"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/tertiaryColor"
            app:cardBackgroundColor="@color/tertiaryColor">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_romance_level_01"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/icon_romance_level_01"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/very_little_romantic"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@id/iv_romance_level_01"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_romance_level_02"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            app:strokeColor="@color/tertiaryColor"
            app:cardBackgroundColor="@color/tertiaryColor">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_romance_level_02"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/icon_romance_level_02"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/little_romantic"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@id/iv_romance_level_02"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_romance_level_03"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:layout_gravity="center_horizontal"
            app:strokeColor="@color/tertiaryColor"
            app:cardBackgroundColor="@color/tertiaryColor">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_romance_level_03"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/icon_romance_level_03"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/normal_romantic"
                    app:layout_constraintTop_toBottomOf="@id/iv_romance_level_03"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_romance_level_04"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="7dp"
            android:layout_gravity="center_horizontal"
            app:strokeColor="@color/tertiaryColor"
            app:cardBackgroundColor="@color/tertiaryColor">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_romance_level_04"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/icon_romance_level_04"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/very_romantic"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@id/iv_romance_level_04"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_romance_level_05"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:layout_gravity="center_horizontal"
            app:strokeColor="@color/tertiaryColor"
            app:cardBackgroundColor="@color/tertiaryColor">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_romance_level_05"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/icon_romance_level_05"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_romantic"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@id/iv_romance_level_05"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </GridLayout>

    <Button
        android:id="@+id/btn_finish_record"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/unactivatedBackgroundColor"
        android:text="@string/finish_record"
        android:textColor="@color/unactivatedColor"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/layout_romance_point"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>